--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -1,4 +1,4 @@
-name: Docker Build
+name: Build Release
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -19,7 +19,7 @@ env:
 
 jobs:
   build:
-
+    name: Build on versioned release
     runs-on: ubuntu-latest
     permissions:
       contents: read
