--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -41,6 +41,16 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      - name: Build for testing
+        uses: docker/build-push-action@v6
+        with:
+          load: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+      
+      - name: Test build
+        run: |
+          docker run --env PING_COUNT=1 --env PING_INTERVAL=1 --env PING_DESTINATION=localhost --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test 
+
       - name: Build final images
         id: build-and-push
         uses: docker/build-push-action@v6
